# aws-athena-mcp

./: pyproject.toml  setup.py
iflow_mcp_aws_athena_mcp/: __init__.py  package.json
iflow_mcp_aws_athena_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
