[project]
name = "iflow-mcp-aws-athena-mcp"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for running AWS Athena queries"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Shen Li", email = "shenli@example.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "aws", "athena", "modelcontextprotocol", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/iflow-mcp/aws-athena-mcp"
Repository = "https://github.com/iflow-mcp/aws-athena-mcp"
Issues = "https://github.com/iflow-mcp/aws-athena-mcp/issues"

[project.scripts]
iflow-mcp-aws-athena-mcp = "iflow_mcp_aws_athena_mcp:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["iflow_mcp_aws_athena_mcp*"]

[tool.setuptools.package-data]
"iflow_mcp_aws_athena_mcp" = ["**/*"]